Add SimpleCorsFilter and update CORS configuration